--- a/client/src/component/Button/index.scss
+++ b/client/src/component/Button/index.scss
@@ -1,11 +1,17 @@
+.wrapper {
+  display: inline-block;
+  padding-top: 1em;
+  padding-right: 2em;
+}
+
 .button {
-    background-color: #3FC1C9; /* Green */
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-style: italic;
-    font-size: 16px;
-  }
+  background-color: #3FC1C9; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-style: italic;
+  font-size: 16px;
+}
