--- a/client/src/containers/CompetitorTemplate/index.scss
+++ b/client/src/containers/CompetitorTemplate/index.scss
@@ -4,6 +4,11 @@
 }
 
 .number-list {
+    width: 50%;
+    margin: auto;
+    padding-left: 3em;
+    text-align: left;
+    
     color: #364F6B;
     list-style: decimal;
     font-style: italic;
