--- a/client/src/component/Divider/index.scss
+++ b/client/src/component/Divider/index.scss
@@ -7,7 +7,7 @@
         font-size: 32px;
         line-height: 49px;
         /* identical to box height */
-
+        text-transform: uppercase;
         color: #364F6B;
     }
 
