--- a/client/src/component/Header/index.scss
+++ b/client/src/component/Header/index.scss
@@ -7,6 +7,8 @@
         font-size: 32px;
         color: #FFFFFF;
         text-decoration:none;
+        text-transform: uppercase;
+        font-style: italic;
     }
 
     .end {
