--- a/client/src/component/Header/index.scss
+++ b/client/src/component/Header/index.scss
@@ -14,4 +14,10 @@
     .end {
         text-align: end;
     }
+
+    .selected {
+        color: rgba(255,255,255,1);
+        text-shadow: 0 0 15px rgba(255,255,255,.5), 
+            0 0 10px rgba(255,255,255,.5);
+    }
 }
