--- a/client/src/component/Loader/index.scss
+++ b/client/src/component/Loader/index.scss
@@ -7,7 +7,7 @@
   border: 4px solid #364F6B;
   box-shadow: inset 0 -1px 1px rgba(255,255,255,0.3);
   
-  & > span {
+  & > div {
     display: block;
     height: 100%;
     border-top-right-radius: 20px;
@@ -22,6 +22,7 @@
     );
     position: relative;
     overflow: hidden;
+    transition: width .6s ease;
   }
 
   .alt {
@@ -32,5 +33,22 @@
       rgb(63,193,201) 69%
     );
   }
-}
 
+  .progress-bar-animated {
+    animation: progress-bar-stripes 1s linear infinite;
+  }
+
+  .progress-bar-striped {
+      background-image: linear-gradient(
+        45deg,
+        hsla(0,0%,100%,.15) 25%,
+        transparent 0,
+        transparent 50%,
+        hsla(0,0%,100%,.15) 0,
+        hsla(0,0%,100%,.15) 75%,
+        transparent 0,
+        transparent);
+      animation: 1s linear infinite;
+      background-size: 1rem 1rem;
+  }
+}
