--- a/client/src/containers/Settings/index.scss
+++ b/client/src/containers/Settings/index.scss
@@ -31,5 +31,11 @@
     float: left;
     width: 90%;
     padding: 0;
-    margin: 0
+    margin: 0;
+
+    div {
+        font-size: 16px;
+        padding: 0.5em 0;
+        color: rgb(252, 81, 133);
+    }
 }
