introduced authentication module

--- a/client/src/component/Header/index.scss
+++ b/client/src/component/Header/index.scss
@@ -15,6 +15,10 @@
         text-align: end;
     }
 
+    .icon {
+        width: 10px;
+    }
+
     .selected {
         color: rgba(255,255,255,1);
         text-shadow: 0 0 15px rgba(255,255,255,.5), 
