--- a/client/src/containers/CompetitorTemplate/index.scss
+++ b/client/src/containers/CompetitorTemplate/index.scss
@@ -8,7 +8,7 @@
     margin: auto;
     padding-left: 3em;
     text-align: left;
-    
+
     color: #364F6B;
     list-style: decimal;
     font-style: italic;
@@ -16,4 +16,8 @@
     font-size: 32px;
     line-height: 49px;
     letter-spacing: 0.15em;
+}
+
+.image {
+    max-height: 300px;
 }
