--- a/client/src/containers/Settings/index.scss
+++ b/client/src/containers/Settings/index.scss
@@ -14,7 +14,7 @@
     width: 100%;
     overflow: hidden;
     padding: 0;
-    margin: 0;
+    margin: 0 0 1em;
 
     font-style: italic;
     font-weight: 900;
