updating styling and event simulation

--- a/client/src/component/Button/index.scss
+++ b/client/src/component/Button/index.scss
@@ -14,7 +14,7 @@
   text-decoration: none;
   display: inline-block;
   font-style: italic;
-  font-size: 16px;
+  font-size: 1.1vw;
 }
 
 .button-alert {
