--- a/client/src/component/List/index.scss
+++ b/client/src/component/List/index.scss
@@ -8,7 +8,7 @@
   list-style: decimal;
   font-style: italic;
   font-weight: 900;
-  font-size: 32px;
+  font-size: 2.2vw;
   line-height: 49px;
   letter-spacing: 0.15em;
 }
