--- a/client/src/containers/Settings/index.scss
+++ b/client/src/containers/Settings/index.scss
@@ -18,7 +18,7 @@
 
     font-style: italic;
     font-weight: 900;
-    font-size: 32px;
+    font-size: 2.2vw;
     color: #364F6B;
 }
 .dt {
@@ -34,7 +34,7 @@
     margin: 0;
 
     div {
-        font-size: 16px;
+        font-size: 1.1vw;
         padding: 0.5em 0;
         color: rgb(252, 81, 133);
     }
