--- a/client/src/component/Divider/index.scss
+++ b/client/src/component/Divider/index.scss
@@ -1,10 +1,10 @@
 .divider {
     padding: 4em 0 4em 0;
-    
+
     h3 {
         font-style: italic;
         font-weight: 900;
-        font-size: 32px;
+        font-size: 2.2vw;
         line-height: 49px;
         /* identical to box height */
         text-transform: uppercase;
