--- a/client/src/component/Header/index.scss
+++ b/client/src/component/Header/index.scss
@@ -4,11 +4,12 @@
     background-color: #364F6B;
 
     a {
-        font-size: 32px;
         color: #FFFFFF;
+        font-size: 2.2vw;
+        font-style: italic;
+        font-weight: 900;
         text-decoration:none;
         text-transform: uppercase;
-        font-style: italic;
     }
 
     .end {
@@ -21,7 +22,7 @@
 
     .selected {
         color: rgba(255,255,255,1);
-        text-shadow: 0 0 15px rgba(255,255,255,.5), 
+        text-shadow: 0 0 15px rgba(255,255,255,.5),
             0 0 10px rgba(255,255,255,.5);
     }
 }
