--- a/client/src/component/Heading/index.scss
+++ b/client/src/component/Heading/index.scss
@@ -1,7 +1,7 @@
 .heading {
     font-style: italic;
     font-weight: 900;
-    font-size: 42px;
+    font-size: 2.9vw;
     line-height: 64px;
 
     color: #364F6B;
