--- a/client/src/component/Image/index.scss
+++ b/client/src/component/Image/index.scss
@@ -6,7 +6,7 @@
         text-decoration: none; /* no underline */
         .subtitle {
             font-weight: 300;
-            font-size: 24px;
+            font-size: 1.6vw;
             line-height: 37px;
             /* identical to box height */
             padding: 0.5em 0 0.5em 0;
