--- a/client/src/containers/EventTemplate/index.scss
+++ b/client/src/containers/EventTemplate/index.scss
@@ -1,6 +1,6 @@
 .wrapper {
+    padding: 5em 0;
     text-align: center;
-    padding-top: 5em;
 }
 
 .number-list {
@@ -13,7 +13,7 @@
     list-style: decimal;
     font-style: italic;
     font-weight: 900;
-    font-size: 32px;
+    font-size: 2.2vw;
     line-height: 49px;
     letter-spacing: 0.15em;
 }
