--- a/client/src/component/Header/index.scss
+++ b/client/src/component/Header/index.scss
@@ -3,6 +3,10 @@
     height: 74px;
     background-color: #364F6B;
 
+    .container {
+        box-sizing: border-box;
+    }
+
     a {
         color: #FFFFFF;
         font-size: 2.2vw;
@@ -12,7 +16,17 @@
         text-transform: uppercase;
     }
 
+    .logo {
+        width: 18vw;
+        margin-right: 4.9vw;
+    }
+
+    .cell {
+        margin-right: 4.9vw;
+    }
+
     .end {
+        flex-grow: 2;
         text-align: end;
     }
 
