--- a/client/src/containers/Home/index.scss
+++ b/client/src/containers/Home/index.scss
@@ -4,6 +4,7 @@
 }
 
 .title {
+    color: #364F6B;
     font-size: 2.2vw;
     font-style: italic;
     font-weight: 600;
@@ -13,6 +14,7 @@
 }
 
 .subtitle {
+    color: #364F6B;
     font-size: 1.6vw;
     font-weight: 300;
     line-height: 37px;
@@ -41,7 +43,7 @@
 }
 
 .first {
-    padding: 4em 0em 4em 0em;
+    min-height: 324px;
 }
 
 .image {
@@ -53,6 +55,7 @@
 }
 
 .eventSubtitle {
+    color: #364F6B;
     font-size: 1.6vw;
     font-style: italic;
 
