--- a/client/src/component/Button/index.scss
+++ b/client/src/component/Button/index.scss
@@ -5,16 +5,19 @@
 }
 
 .button {
-  cursor: pointer;
   background-color: #3FC1C9;
   border: none;
+  border-radius: 5px;
   color: white;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 1.1vw;
+  font-style: italic;
+  font-weight: 900;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
-  font-style: italic;
-  font-size: 1.1vw;
+  text-transform: uppercase;
 }
 
 .button-alert {
