--- a/client/src/component/Loader/index.scss
+++ b/client/src/component/Loader/index.scss
@@ -1,4 +1,4 @@
-.meter { 
+.meter {
 	height: 36px;
 	position: relative;
 	-moz-border-radius: 25px;
@@ -6,7 +6,7 @@
   border-radius: 25px;
   border: 4px solid #364F6B;
   box-shadow: inset 0 -1px 1px rgba(255,255,255,0.3);
-  
+
   & > div {
     display: block;
     height: 100%;
@@ -32,6 +32,8 @@
       rgb(63,193,201) 37%,
       rgb(63,193,201) 69%
     );
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
   }
 
   .progress-bar-animated {
