--- a/client/src/component/Header/index.scss
+++ b/client/src/component/Header/index.scss
@@ -5,6 +5,7 @@
 
     .container {
         box-sizing: border-box;
+        flex-wrap: nowrap;
     }
 
     a {
@@ -12,7 +13,7 @@
         font-size: 2.2vw;
         font-style: italic;
         font-weight: 900;
-        text-decoration:none;
+        text-decoration: none;
         text-transform: uppercase;
     }
 
